--- a/PiyushEcommerceApplication/pom.xml
+++ b/PiyushEcommerceApplication/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.0.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.masai</groupId>
+	<groupId>com.ecommerce</groupId>
 	<artifactId>PiyushEcommerceApplication</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>PiyushEcommerceApplication</name>
@@ -50,6 +50,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 	</dependencies>
 
